demos/Hello_ISTIO/scripts/istio/1-1.vs-client-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-server
spec:
  gateways:
  - chat-gateway
  hosts:
  - chat-server-example-chat.apps.toronto.openshiftworkshop.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chat-server
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-client
spec:
  gateways:
  - chat-gateway
  hosts:
  - chat-client.apps.toronto.openshiftworkshop.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chat-client
        subset: v1
