demos/Hello_ISTIO/scripts/istio/1-2.destinationRule-chat-client.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chat-client
spec:
  host: chat-client.chat.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      app: chat-client
