demos/Hello_ISTIO/scripts/istio/1-3.destinationRule-chat-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chat-server
spec:
  host: chat-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      app: chat-server
      version: v1
