demos/Hello_ISTIO/scripts/istio/4-0.destinationRule-chat-server-v1-v2-roundrobin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chat-server
spec:
  host: chat-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      app: chat-server
      version: v1
  - name: v2
    labels:
      app: chat-server
      version: v2
