demos/Hello_ISTIO/scripts/istio/5-0.vs-chat-server-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-server
spec:
  gateways:
  - chat-gateway
  hosts:
  - %CHAT_SERVER_HOSTNAME%
  http:
  - route:
    - destination:
        host: chat-server
        subset: all
      weight: 100
