demos/Hello_ISTIO/scripts/istio/5-0.vs-initial-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-server
spec:
  gateways:
  - chat-gateway
  hosts:
  - chat-server-example-chat.apps.toronto.openshiftworkshop.com
  http:
  - route:
    - destination:
        host: chat-server
        subset: all
      weight: 100
