demos/Hello_ISTIO/scripts/istio/5-1.destinationRule-chat-server-v1-v2-round_robin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chat-server
spec:
  host: chat-server
  subsets:
  - name: all
    labels:
      app: chat-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
