demos/Hello_ISTIO/scripts/istio/8-0.vs-auth-fault-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-fault
spec:
  hosts:
  - auth
  http:
  - route:
    - destination:
        host: auth
        port:
          number: 8080
    fault:
      abort:
        httpStatus: 503
        percent: 50
