demos/Hello_ISTIO/scripts/istio/8-1.vs-initial-server-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-retry
spec:
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: auth
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
