demos/Hello_ISTIO/scripts/istio/tip.vs-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-fault-inject-deply
spec:
  hosts:
  - auth
  http:
  - match:
    - sourceLabels:
        app: chat-server
    route:
    - destination:
        host: auth
        port:
          number: 8080
    fault:
      delay:
        percent: 50
        fixedDelay: 5s
